# Tag-Management-System

./: .env  .gitignore  .todo  Historian.postman_collection.json  LICENSE  New-Sarnia_Tags.xlsx  README.md  data.json  defs.py  file.http  info.json  key.key  main.py  pyproject.toml  requirements.txt  token.key  utili.py  var.py  watchdog.sh
.github/workflows/: program.yml
ExampleData/: data.json  tag-properties-temp.json
PostMan/: SmartCover.postman_collection.json
res_sarnia/: .gitignore  .todo
res_sarnia/data/: data.json  info.json  tag.json  tagnames.csv  tagnames.txt
res_sarnia/keys/: HS.key  SC.key  token.key
res_sarnia/src/: logconfig.py  main.py  security.py  utili.py  var.py
